--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,11 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # `jekyll serve`. If you change this file, please restart the server process.
 
+
+
+remote_theme             : "mmistakes/minimal-mistakes"
+minimal_mistakes_skin    : "dark"
+
 # Site Settings
 locale                   : "en-US"
 title                    : "Your Name / Site Title"
