--- a/_config.yml
+++ b/_config.yml
@@ -73,18 +73,18 @@ analytics:
 author:
   name             : "林徐乐 Xule Lin"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "PhD Student in Management and Entrepreneurship"
   location         : "Decentralized"
-  employer         : Imperial College Business School
-  pubmed           : 
+  employer         : "Imperial College Business School"
+  pubmed           :
   googlescholar    :
   email            : "linxule@imperial.ac.uk"
   researchgate     : "https://www.researchgate.net/profile/Xule_Lin"
   github           : "LinXule"
   linkedin         : "linxule"
   twitter          : "LinXule"
-#  weibo            :
-#  wikipedia        :
+  weibo            :
+  wikipedia        :
 
 
 # Reading Files
