--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ atom_feed:
   path                   : # blank (default) uses feed.xml
 
 # SEO Related
-google_site_verification :
+google_site_verification : "0YbeRZVy46TlZOzgNZlcrY3B_qGagiV-LicS4Qhu-5M"
 bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
