--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 
 
-remote_theme             : "mmistakes/minimal-mistakes@4.17.2"
+remote_theme             : mmistakes/minimal-mistakes/dark
 
 # Site Settings
 locale                   : "en-US"
