--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,8 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 
-Theme            : mmistakes/minimal-mistakes/dark
+remote_theme: "mmistakes/minimal-mistakes@4.16.3"
+minimal_mistakes_skin    : "dark" #"default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
