--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ author:
   avatar           : "profile.png"
   bio              : "PhD Student in Management and Entrepreneurship"
   location         : "Decentralized"
-  employer         : "Imperial College Business School"
+  employer         : 
   pubmed           :
   googlescholar    :
   email            : "linxule@imperial.ac.uk"
