--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,14 +3,11 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/     
+  - title: "Twitter List - Management Research"
+    url: /twitter1/   
     
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
+  - title: "Twitter List - Crypto & DAOs Research"
+    url: /twitter2/      
         
   - title: "Blog Posts"
     url: /year-archive/
@@ -18,5 +15,3 @@ main:
   - title: "CV"
     url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
