--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,10 +3,10 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Twitter List - Management Research"
+  - title: "#Management"
     url: /twitter1/   
     
-  - title: "Twitter List - Crypto & DAOs Research"
+  - title: "#Crypto&DAOs"
     url: /twitter2/     
         
   - title: "Blog Posts"
