--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ analytics:
 # Site Author
 author:
   name             : "林徐乐 Xule Lin"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "PhD Student in Management and Entrepreneurship"
   location         : "Decentralized"
   pubmed           :
