--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
   - title: "#Management"
     url: /twitter1/   
     
-  - title: "#Crypto&DAOs"
+  - title: "#DAOs & Crypto"
     url: /twitter2/     
         
 
