--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,21 +1,23 @@
 # main links links
 main:
- 
+
   - title: "CV"
     url: /cv/
 
   - title: "#Management"
-    url: /twitter1/   
-    
+    url: /twitter1/
+
   - title: "#DAOs & Crypto"
-    url: /twitter2/     
-        
+    url: /twitter2/
+
   - title: "Blog Posts"
     url: /year-archive/
-    
+
   - title: "Publications"
     url: /publications/
-   
-  - title: "Translate/中文"
+
+  - title: "Other Languages"
     url: https://translate.googleusercontent.com/translate_c?depth=1&nv=1&rurl=translate.google.com.hk&sl=auto&sp=nmt4&tl=zh-CN&u=https://linxule.com/&xid=17259,15700023,15700186,15700190,15700256,15700259,15700262,15700265,15700271,15700283&usg=ALkJrhg0g5a1PV7h8snDSpoKGELA7cEh1A
-    
+
+  - title: "中文"
+    url: http://fanyi.baidu.com/transpage?query=linxule.com&source=url&ie=utf8&from=en&to=zh&render=1
