--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,7 +17,7 @@ main:
     url: /publications/
 
   - title: "Other Languages"
-    url: https://translate.googleusercontent.com/translate_c?depth=1&nv=1&rurl=translate.google.com.hk&sl=auto&sp=nmt4&tl=zh-CN&u=https://linxule.com/&xid=17259,15700023,15700186,15700190,15700256,15700259,15700262,15700265,15700271,15700283&usg=ALkJrhg0g5a1PV7h8snDSpoKGELA7cEh1A
+    url: https://translate.google.com/translate?sl=en&tl=zh-CN&u=linxule.com
 
   - title: "中文"
     url: http://fanyi.baidu.com/transpage?query=linxule.com&source=url&ie=utf8&from=en&to=zh&render=1
