--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,6 +16,9 @@ main:
   - title: "Publications"
     url: /publications/
 
+  - title: "Projects/Work-in-progress"
+    url: /portfolio/
+
   - title: "Other Languages"
     url: https://translate.google.com/translate?sl=en&tl=zh-CN&u=linxule.com
 
