--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
   - title: "Blog Posts"
     url: /year-archive/
 
-  - title: "Projects/Work-in-progress"
+  - title: "Projects"
     url: /portfolio/
 
   - title: "Publications"
