--- a/_config.yml
+++ b/_config.yml
@@ -74,9 +74,10 @@ author:
   googlescholar    :
   email            : "linxule@imperial.ac.uk"
   researchgate     : "https://www.researchgate.net/profile/Xule_Lin"
-  github           : "LinXule"
-  linkedin         : "linxule"
   twitter          : "LinXule"
+  linkedin         : "linxule"
+  github           : "LinXule"
+  万方数据学术资源    : "http://social.wanfangdata.com.cn/scholar/toScholarInfo.do?id=11190120"
   weibo            :
   wikipedia        :
 
