--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ analytics:
 author:
   name             : "林徐乐 Xule Lin"
   avatar           : "profile.png"
-  bio              : "PhD Student in Management and Entrepreneurship"
+  bio              : "PhD Student in the Department of Management and Entrepreneurship, Imperial College Business School"
   location         : "Decentralized"
   pubmed           :
   googlescholar    :
