--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "@LinXule"
 title_separator          : "-"
 name                     : &name "林徐乐 Xule Lin"
-description              : &description "PhD student at Imperial College Business School"
+description              : &description "Management and Entrepreneurship PhD student at Imperial College Business School"
 url                      : https://linxule.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "linxule/linxule.github.io"
