--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ analytics:
 author:
   name             : "林徐乐 Xule Lin"
   avatar           : "profile.png"
-  bio              : "Management and Entrepreneurship PhD student at Imperial College Business School, Imperial College London"
+  bio              : "Management and Entrepreneurship PhD student at the Imperial College London"
   location         : "Decentralized"
   pubmed           :
   googlescholar    :
