--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,5 +22,5 @@ main:
   - title: "#MgmtResearch"
     url: /curation-mgmt/
 
-  - title: "#DAOs&Crypto"
+  - title: "#DAOs"
     url: /curation-dao/
