--- a/_config.yml
+++ b/_config.yml
@@ -231,6 +231,7 @@ plugins:
   - jekyll-feed
   - jekyll-redirect-from
   - jekyll-twitter-plugin
+  - jemoji
 # mimic GitHub Pages with --safe
 whitelist:
   - jekyll-paginate
