--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ author:
   pubmed           :
   googlescholar    :
   email            : "x@linxule.com"
-  researchgate     : "https://www.researchgate.net/profile/Xule_Lin"
+  researchgate     : 
   twitter          : "LinXule"
   linkedin         : "linxule"
   github           : "LinXule"
