--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ author:
 # 万方数据学术资源    : "http://social.wanfangdata.com.cn/scholar/toScholarInfo.do?id=11190120"
   weibo            :
   wikipedia        :
-# orcid            : "0000-0001-7885-4194"
+  orcid            : "https://orcid.org/0000-0001-7885-4194"
 
 # Reading Files
 include:
