--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ author:
   pubmed           :
   googlescholar    :
   email            : "x@linxule.com"
-  researchgate     : 
+  researchgate     :
   twitter          : "LinXule"
   linkedin         : "linxule"
   github           : "LinXule"
@@ -152,7 +152,9 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
-
+  daogov:
+    output: true
+    permalink: /:collection/:path/
 
 # Defaults
 defaults:
@@ -209,6 +211,15 @@ defaults:
       layout: talk
       author_profile: true
       share: true
+  # _daogov
+  - scope:
+      path: ""
+      type: daogov
+    values:
+      layout: single
+      author_profile: false
+      share: true
+      comment: true
 
 # Sass/SCSS
 sass:
