--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ _site/
 .trash/
 .DS_Store
 .DS_Store
+.obsidian/app.json
+.obsidian/appearance.json
+.obsidian/core-plugins.json
+.obsidian/workspace
