--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -98,8 +98,9 @@
   },
   "active": "7281af4a0b8396e9",
   "lastOpenFiles": [
-    "_publications/2009-12-01-Origin-Development-and-Revelation 1.md",
+    "_publications/2021-06-26-ASQ-Interview.md",
     "_publications/2009-12-01-Origin-Development-and-Revelation.md",
+    "_publications/2009-12-01-Origin-Development-and-Revelation 1.md",
     "_posts/2021-01-27-working-with-Obsidian.md",
     ".gitignore.md",
     "_posts/2020-05-26-so-what-are-you-studying.md",
