--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -100,6 +100,7 @@
   "lastOpenFiles": [
     "_publications/2021-06-26-ASQ-Interview.md",
     "_publications/2009-12-01-Origin-Development-and-Revelation.md",
+    "_pages/publications.md",
     "_publications/2009-12-01-Origin-Development-and-Revelation 1.md",
     "_posts/2021-01-27-working-with-Obsidian.md",
     ".gitignore.md",
