update google scholar

--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ author:
   bio              : "Management and Entrepreneurship PhD student at Imperial College London"
   location         : "Decentralized"
   pubmed           :
-  googlescholar    :
+  googlescholar    : "https://scholar.google.com/citations?user=ryocLTAAAAAJ&hl=en"
   email            : "x@linxule.com"
   researchgate     :
   twitter          : "LinXule"
