--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,12 @@ _site/
 .obsidian/appearance.json
 .obsidian/core-plugins.json
 .obsidian/workspace
+.obsidian/community-plugins.json
+.obsidian/hotkeys.json
+.obsidian/plugins/obsidian-git/data.json
+.obsidian/plugins/obsidian-git/main.js
+.obsidian/plugins/obsidian-git/manifest.json
+.obsidian/plugins/obsidian-git/manifest.json
+.obsidian/plugins/obsidian-git/main.js
+.obsidian/plugins/obsidian-git/data.json
+.obsidian/community-plugins.json
