--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,14 +4,11 @@
     "type": "split",
     "children": [
       {
-        "id": "7281af4a0b8396e9",
+        "id": "b1d5c57bd7cf1d70",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "_publications/2021-06-26-ASQ-Interview.md",
-            "mode": "source"
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -68,7 +65,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_publications/2021-06-26-ASQ-Interview.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -84,9 +80,7 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {
-                "file": "_publications/2021-06-26-ASQ-Interview.md"
-              }
+              "state": {}
             }
           }
         ]
@@ -96,10 +90,12 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "7281af4a0b8396e9",
+  "active": "b1d5c57bd7cf1d70",
   "lastOpenFiles": [
-    "_publications/2021-06-26-ASQ-Interview.md",
+    "_publications/2021-08-23.md",
     "_publications/2009-12-01-Origin-Development-and-Revelation.md",
+    "_publications/2021-06-26-ASQ-Interview 1.md",
+    "_publications/2021-06-26-ASQ-Interview.md",
     "_pages/publications.md",
     "_publications/2009-12-01-Origin-Development-and-Revelation 1.md",
     "_posts/2021-01-27-working-with-Obsidian.md",
