update CV for CARAMA

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,14 @@ _site/
 .obsidian/plugins/obsidian-git/data.json
 .obsidian/community-plugins.json
 .obsidian/workspace
+.obsidian/community-plugins.json
+.obsidian/community-plugins.json
+.obsidian/plugins/obsidian-git/data.json
+.obsidian/plugins/obsidian-git/main.js
+.obsidian/plugins/obsidian-git/manifest.json
+.obsidian/workspace
+.obsidian/community-plugins.json
+.obsidian/plugins/obsidian-git/data.json
+.obsidian/plugins/obsidian-git/main.js
+.obsidian/plugins/obsidian-git/manifest.json
+.obsidian/workspace
