--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Xule"
   pronouns         : # example: "she/her"  
-  bio              : "PhD student in Department of Management & Entrepreneurship at Imperial College London"
+  bio              : "PhD student"
   location         : "Decentralized"
   employer         : "Imperial College London"
   uri              : # URL
